@@ -140,7 +140,7 @@ public class ConnectionManager implements Watcher {
                   closeKeeper(keeper);
                   throw new RuntimeException(e1);
                 }
-                
+
                 log.info("Connection with ZooKeeper reestablished.");
                 try {
                   client.updateKeeper(keeper);
@@ -154,24 +154,9 @@ public class ConnectionManager implements Watcher {
                   throw new RuntimeException(t);
                 }
 
-                // The new event thread will call connected
-                // we just start the reconnect thread and 
-                // do nothing else
-                
                 if (onReconnect != null) {
-                  Thread thread = new Thread() {
-                    @Override
-                    public void run() {
-                      try {
-                        onReconnect.command();
-                      } catch (Exception e) {
-                        log.warn("Exception running onReconnect command", e);
-                      }
-                    }
-                  };
-                  thread.start();
+                  onReconnect.command();
                 }
-                
               }
             });
       } catch (Exception e) {
